# milsim

./: .gitignore  .gitmodules  CMakeLists.txt  CONVENTIONS.md  LINKS.md  PHILOSOPHY.md  QUESTIONS.md  README.md  ROADMAP.md  SCHEMA.md  renderdoc.cap  renderdoc2.cap  renderdoc3.cap
app/: CMakeLists.txt  main.cpp
app/include/states/: main_screen.hpp
app/states/: main_screen.cpp
engine/: CMakeLists.txt
engine/include/: assets.hpp  component.hpp  core.hpp  entity.hpp  hermes.hpp  logger.hpp  object.hpp  render_command.hpp  render_context.hpp  render_resource.hpp  render_scene.hpp  scene.hpp  scene_graph.hpp  state.hpp  sys.hpp
engine/include/component/: debug.hpp  mesh.hpp  render.hpp  transform.hpp
engine/include/sys/: alexandria.hpp  ecs.hpp  hermes.hpp  input.hpp  render.hpp
engine/include/util/: crypto.hpp  io.hpp  queue.hpp
engine/src/: assets.cpp  core.cpp  ecs.cpp  entity.cpp  hermes.cpp  logger.cpp  object.cpp  render_command.cpp  render_context.cpp  render_resource.cpp  render_scene.cpp  scene.cpp  scene_graph.cpp  state.cpp  sys.cpp
engine/src/component/: debug.cpp  mesh.cpp  render.cpp  transform.cpp
engine/src/sys/: alexandria.cpp  ecs.cpp  hermes.cpp  input.cpp  render.cpp
engine/src/util/: crypto.cpp  io.cpp
ext/: CMakeLists.txt
ext/glad/4.5-core/include/glad/: glad.h
ext/glad/4.5-core/src/: glad.c
resources/muzzle flash/: source.md
run/: Base.json  Base.lua  alexandria.lua  base.cfg  base.lua  render_config.json  render_config.lua  states.lua
run/Base/Shaders/: Simple.frag  Simple.vert  Simple2.frag
run/Base/Shaders/GUI/: pass.frag  pass.vert
run/Base/Shaders/Overlay/: overlay.frag  overlay.vert
